# django-elasticsearch

./: .travis.yml  README.md  README.rst  mkdocs.yml  pyproject.toml  runtests.py  tox.ini
django_elasticsearch/: __init__.py  documents.py  fields.py
django_elasticsearch/management/commands/: search_index.py
django_elasticsearch_dsl/: __init__.py  apps.py  documents.py  fields.py  registries.py  signals.py
django_elasticsearch_dsl/management/commands/: search_index.py
docs/: changelog.md  contributing.md  documents.md  index.md  management.md  settings.md
docs/source/: conf.py  es_index.rst  fields.rst  index.rst  quickstart.rst  settings.rst
example/example/: settings.py  urls.py
example/test_app/: autofixtures.py  documents.py  models.py
tests/: documents.py  fixtures.py  models.py  test_commands.py  test_documents.py  test_fields.py  test_indices.py  test_integration.py  test_registries.py
